# borjigin-gpt

./: .gitignore  app.py  main.py  pyproject.toml  test_tavily_research.py  varify_structure.py
.streamlit/: config.toml
src/agents/: __init__.py  graph.py  mock_interview.py  nodes.py  orchestrator.py  state.py
src/config/: __init__.py  settings.py
src/memory/: __init__.py  company_research_cache.py  long_term_memory.py  short_term_memory.py
src/tools/: __init__.py  analysis_tools.py  generation_tools.py  retrieval_tools.py  web_search.py
src/ui/: __init__.py  sidebar.py  utils.py
src/ui/pages/: analytics.py  home.py  mock_interview.py  practice_mode.py  preparation_mode.py  profile_setup.py
src/utils/: __init__.py  document_parser.py  text_processing.py
